--- a/customers.html
+++ b/customers.html
@@ -247,42 +247,42 @@
             </tr>
             <tr class="table-warning">
               <td scope="row">6</td>
-              <td>Pankaj</td>
-              <td>pankaj@gmail.com</td>
+              <td>Nilesh</td>
+              <td>nilesh@gmail.com</td>
               <td>
-                <p id="pankajBankBalance">13560</p>
+                <p id="nileshBankBalance">13560</p>
               </td>
             </tr>
             <tr class="table-default">
               <td>7</td>
-              <td>Chirag</td>
-              <td>chirag@gmail.com</td>
+              <td>Guneet</td>
+              <td>guneet@gmail.com</td>
               <td>
-                <p id="chiragBankBalance">56800</p>
+                <p id="guneetBankBalance">56800</p>
               </td>
             </tr>
             <tr class="table-warning">
               <td scope="row">8</td>
-              <td>Divyam</td>
-              <td>divyam@gmail.com</td>
+              <td>Raja</td>
+              <td>raja@gmail.com</td>
               <td>
-                <p id="divyamBankBalance">32330</p>
+                <p id="rajaBankBalance">32330</p>
               </td>
             </tr>
             <tr class="table-default">
               <td scope="row">9</td>
-              <td>Nikhil</td>
-              <td>nikhil@gmail.com</td>
+              <td>Prabh</td>
+              <td>prabh@gmail.com</td>
               <td>
-                <p id="nikhilBankBalance">85400</p>
+                <p id="prabhBankBalance">85400</p>
               </td>
             </tr>
             <tr class="table-warning">
               <td scope="row">10</td>
-              <td>Kartik</td>
-              <td>kartik@gmail.com</td>
+              <td>Karan</td>
+              <td>karan@gmail.com</td>
               <td>
-                <p id="kartikBankBalance">68330</p>
+                <p id="karanBankBalance">68330</p>
               </td>
             </tr>
           </tbody>
